# python-bingtiles

./: README.md  pyproject.toml  setup.py
bingtiles/: __init__.py  __main__.py  fetch.py  mapgen.py  utils.py
bingtiles/provider/: __init__.py  bing.py  esri.py  google.py
examples/: download_tile.py  generate_map.py  widget.py
